Closes #612: fix Code smells, removes junit-vintag
* increases test coverage
* fixes codesmells from Java17 upgrade
* adding more useful ArchUnitTests
* changes related to new ArchUnitTest
* removes junit-vintage dependency