@@ -1,7 +1,5 @@
 package pro.taskana.adapter.camunda.outbox.rest.service;
 
-import static java.util.stream.Collectors.toList;
-
 import jakarta.ws.rs.core.MultivaluedMap;
 import java.io.IOException;
 import java.sql.Connection;
@@ -42,7 +40,7 @@ public class CamundaTaskEventsService {
   private static final String RETRIES = "retries";
   private static final String TYPE = "type";
 
-  private static final List<String> ALLOWED_PARAMS = Stream.of(TYPE, RETRIES).collect(toList());
+  private static final List<String> ALLOWED_PARAMS = Stream.of(TYPE, RETRIES).toList();
 
   private static final String OUTBOX_SCHEMA = OutboxRestConfiguration.getOutboxSchema();
   private static final String SQL_GET_CREATE_EVENTS =
@@ -365,7 +363,7 @@ public class CamundaTaskEventsService {
     List<String> invalidParams =
         filterParams.keySet().stream()
             .filter(key -> !ALLOWED_PARAMS.contains(key))
-            .collect(Collectors.toList());
+            .toList();
 
     if (!invalidParams.isEmpty()) {
       throw new InvalidArgumentException("Provided invalid request params: " + invalidParams);
